# Amanuensis

./: .gitignore  MANIFEST.in  README.AMANUENSIS.md  README.LEXICON.md  README.md  default.nix  mypy.ini  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.py  shell.nix  tox.ini
amanuensis/: __main__.py  app.py  cli.py  config.py  configs.py  database.py  errors.py  models.py  user.py
amanuensis/app/: __init__.py
amanuensis/backend/: __init__.py  article.py  character.py  index.py  indexrule.py  lexicon.py  membership.py  post.py  user.py
amanuensis/cli/: __init__.py  admin.py  character.py  helpers.py  index.py  lexicon.py  post.py  server.py  user.py
amanuensis/config/: __init__.py  context.py  dict.py  directory.py  init.py  loader.py
amanuensis/db/: __init__.py  database.py  models.py
amanuensis/lexicon/: __init__.py  admin.py  gameloop.py  manage.py  publish.py  setup.py
amanuensis/log/: __init__.py  setup.py
amanuensis/models/: __init__.py  factory.py  lexicon.py  user.py
amanuensis/parser/: __init__.py  analyze.py  core.py  helpers.py  parsing.py  render.py  text.py  tokenizer.py
amanuensis/resources/: __init__.py  article.json  character.json  default_config.json  editor.css  editor.js  global.json  lexicon.json  page.css  user.json
amanuensis/server/: __init__.py  auth.py  forms.py  helpers.py  home.py  lexicon.jinja  lexicon.py  macros.jinja  page.jinja  page_1col.jinja  page_2col.jinja
amanuensis/server/auth/: __init__.py  auth.login.jinja  forms.py
amanuensis/server/home/: __init__.py  forms.py  home.admin.jinja  home.create.jinja  home.root.jinja
amanuensis/server/lexicon/: __init__.py  forms.py  lexicon.article.jinja  lexicon.contents.jinja  lexicon.join.jinja  lexicon.rules.jinja  lexicon.statistics.jinja
amanuensis/server/session/: __init__.py  editor.py  forms.py  session.character.jinja  session.editor.jinja  session.review.jinja  session.root.jinja  session.session.jinja  (+2 more)
amanuensis/templates/: admin.html  macros.html  page.html  page_1col.html  page_2col.html  page_2col.jinja
amanuensis/user/: __init__.py  manage.py  signup.py
tests/: conftest.py  test_amanuensis.py  test_article.py  test_auth.py  test_character.py  test_db.py  test_home.py  test_index.py  test_lexicon.py  test_membership.py  test_parser.py  test_post.py  test_server.py  test_user.py
tests/backend/: test_article.py  test_character.py  test_db.py  test_index.py  test_lexicon.py  test_membership.py  test_post.py  test_rule.py  test_user.py
(+36 files in other folders)
