[tool.poetry]
name = "amanuensis"
version = "0.1.0"
description = ""
authors = ["Tim Van Baak <tim.vanbaak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-Login = "^0.5.0"
Flask-WTF = "^0.14.3"
SQLAlchemy = "^1.4.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
